Limit backend heap memory allocation
    This per-backend GUC can limit the amount of heap allocated
    memory.  Upon reaching this limit "out of memory" error will
    be triggered.

    GUC is diabled by default.

    Authors: Maxim Orlov <orlovmg@gmail.com>, Anton A. Melnikov <a.melnikov@postgrespro.ru>

--- a/src/backend/utils/misc/postgresql.conf.sample
+++ b/src/backend/utils/misc/postgresql.conf.sample
@@ -171,6 +171,7 @@
 #serializable_buffers = 32		# memory for pg_serial
 #subtransaction_buffers = 0		# memory for pg_subtrans (0 = auto)
 #transaction_buffers = 0		# memory for pg_xact (0 = auto)
+#max_backend_memory = 0			# limit amount of per-backend allocated memory in megabytes
 
 # - Disk -
 
